<resources>
    <string name="app_name">Pet Spot</string>
    <string name="facebook_app_id">1896014867332535</string>
    <string name="fb_login_protocol_scheme">fb1896014867332535</string>

    <!--Login Activity Strings-->
    <string name="login_button">Sign in</string>
    <string name="register_button">Do not have an account? Sign up</string>
    <string name="forgot_password_button">Forgot Password?</string>
    <string name="authentication_validation_toast">Please enter both email and password</string>
    <string name="auth_failed_toast">Wrong email or password</string>
    <string name="email_hint">email address</string>
    <string name="password_hint">password</string>

    <!--Sign up Activity Strings-->
    <string name="registeration_form">Registeration Form:</string>
    <string name="signup_button">Sign Up</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="verify_email_toast">Account created successfully, an email was sent to you
        to verify your account</string>
    <string name="check_all_fields">Please enter all fields</string>
    <string name="check_passwords">Password is not the same in the two fields</string>
    <string name="volunteer_check_box">Do you want to volunteer in raising homeless animals?</string>


    <!--Forgot Password Activity-->
    <string name="reset_password_button">Reset Password</string>
    <string name="reset_password_text">Please enter your email address
        below to reset your password</string>
    <string name="check_email_entered_toast">Please enter a valid email address</string>
    <string name="confirm_email_sent_toast">Email sent successfully please check your email</string>
    <string name="title_activity_main">MainActivity</string>


    <!--Admin Activity-->
    <string name="add_admin_button">Add Admin</string>
    <string name="add_shelter_button">Add Shelter</string>
    <string name="admin_events_button">events</string>
    <string name="admin_vets_button">vets</string>

    <!--Add Admin Activity-->
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="admin_type_tv">Select Admin Type</string>

    <!--Add Vet Activity-->
    <string name="vet_name_hint">Vet Name</string>
    <string name="dr_name_hint">DR Name</string>
    <string name="vet_address_hint">Vet Address</string>
    <string name="vet_telephone_hint">Vet Telephone</string>
    <string name="vet_open_from_hint">Open From..</string>
    <string name="vet_open_to_hint">Open To..</string>
    <string name="add_vet_button">Add Vet</string>

    <!--Add Shelter Activity-->
    <string name="shelter_name_hint">Shelter Name</string>

    <!--Select Shelter Location Activity-->
    <string name="next_button">Next</string>

    <!--User Main Activity-->
    <string name="show_events_button">Show Events</string>
    <string name="vets_directory">Show vets</string>
    <string name="show_users">Show Users</string>
    <string name="user_profile">Profile</string>

    <!--Shelter Main Activity-->
    <string name="view_requests">View Requests</string>
    <string name="request_location">Click on Image to view Location</string>

    <!--Add Events Activity-->
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="add_events_button">Add Event</string>
    <string name="choose_event_photo">Choose Event Photo</string>

    <!--Menu File-->
    <string name="sign_out_menu_item">Sign Out</string>

    <!--User Profile-->
    <string name="pets_text_view">Pets</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="no_pets">You Currently Have No Pets</string>
    <string name="add_pet_button">Add Pet</string>
    <string name="volunteer_true">Volunteered to own homeless animals</string>
    <string name="volunteer_false">Can not own homeless animals right now</string>

    <!--Add Pet Activity-->
    <string name="pet_name">Pet Name</string>
    <string name="pet_type">Pet Type (Cat, Dog, etc..)</string>
    <string name="pet_gender">Pet Gender</string>
    <string name="pet_age">Pet Age</string>
    <string name="pet_breed">Pet Breed</string>
    <string name="imaage_change">Click on image to select another one</string>
</resources>
