<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="com.example.android.shelterforpets.Authentication.SignUpActivity">


    <TextView
        android:id="@+id/registeration_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        android:text="@string/registeration_form"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/signup_last_name"
        android:layout_alignLeft="@+id/signup_last_name"
        android:layout_alignStart="@+id/signup_last_name" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/signup_email"
        android:layout_alignLeft="@+id/signup_email"
        android:layout_alignStart="@+id/signup_email" />

    <EditText
        android:id="@+id/signup_confirm_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/signup_password"
        android:layout_alignLeft="@+id/signup_password"
        android:layout_alignStart="@+id/signup_password" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/signup_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/signup_first_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        android:layout_below="@+id/registeration_form"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/signup_last_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/signup_first_name"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
