<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.shelterforpets.Admin.AddAdmins"
    android:layout_margin="8dp">

    <EditText
        android:id="@+id/add_admin_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/add_admin_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        android:layout_below="@+id/add_admin_first_name"
        android:layout_alignLeft="@+id/add_admin_first_name"
        android:layout_alignStart="@+id/add_admin_first_name" />

    <EditText
        android:id="@+id/add_admin_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_alignLeft="@+id/add_admin_last_name"
        android:layout_alignStart="@+id/add_admin_last_name"
        android:layout_below="@+id/add_admin_last_name"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/add_admin_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_alignLeft="@+id/add_admin_email"
        android:layout_alignStart="@+id/add_admin_email"
        android:layout_below="@+id/add_admin_email"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/add_admin_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:layout_alignLeft="@+id/add_admin_password"
        android:layout_alignStart="@+id/add_admin_password"
        android:layout_below="@+id/add_admin_password"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/add_admin_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_admin_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:entries="@array/admin_types_array"/>

    <TextView
        android:id="@+id/add_admin_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_type_tv"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/add_admin_confirm_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp" />

    <Button
        android:id="@+id/add_admin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_admin_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
