<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.shelterforpets.Admin.AddEvents"
    android:background="@drawable/backgrouand_with_filter">

    <EditText
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/event_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/event_date"
        android:layout_below="@+id/event_description"
        android:layout_alignLeft="@+id/event_description"
        android:layout_alignStart="@+id/event_description" />

    <EditText
        android:id="@+id/event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/event_name"
        android:layout_alignStart="@+id/event_name"
        android:layout_below="@+id/event_name"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/event_description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/event_date"
        android:layout_alignStart="@+id/event_date"
        android:layout_below="@+id/event_date"
        android:layout_marginTop="8dp"
        android:hint="@string/event_time"
        android:ems="10"
        android:inputType="time" />


    <ImageButton
        android:id="@+id/add_event"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/add_events_button"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/event_choose_photo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/add_event"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:id="@+id/event_choose_photo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/choose_event_photo"
        android:src="@drawable/choose_event_photo"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"/>
</RelativeLayout>
