<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.salmaali.app.petspot.User.AddPet"
    android:background="@drawable/backgrouand_with_filter">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imaage_change"
        android:layout_marginTop="49dp"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/add_pet_name"
        android:layout_alignStart="@+id/add_pet_name" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/pet"
        android:layout_marginTop="4dp"
        android:scaleType="fitXY"
        android:id="@+id/add_pet_image"
        android:clickable="true"
        android:background="@android:color/transparent"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/add_pet_name"
        android:hint="@string/pet_name"
        android:layout_below="@+id/add_pet_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/add_pet_type"
        android:layout_marginTop="8dp"
        android:hint="@string/pet_type"
        android:layout_below="@+id/add_pet_name"
        android:layout_alignLeft="@+id/add_pet_name"
        android:layout_alignStart="@+id/add_pet_name" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/add_pet_gender"
        android:hint="@string/pet_gender"
        android:layout_below="@+id/add_pet_type"
        android:layout_alignLeft="@+id/add_pet_type"
        android:layout_alignStart="@+id/add_pet_type"
        android:layout_marginTop="8dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/add_pet_age"
        android:hint="@string/pet_age"
        android:inputType="number"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/add_pet_gender"
        android:layout_alignLeft="@+id/add_pet_gender"
        android:layout_alignStart="@+id/add_pet_gender" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/add_pet_breed"
        android:hint="@string/pet_breed"
        android:layout_below="@+id/add_pet_age"
        android:layout_alignLeft="@+id/add_pet_age"
        android:layout_alignStart="@+id/add_pet_age"
        android:layout_marginTop="8dp" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:src="@drawable/add_pet"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:id="@+id/add_pet_button"
        android:layout_below="@+id/add_pet_breed"
        android:layout_alignLeft="@+id/add_pet_image"
        android:layout_alignStart="@+id/add_pet_image" />



</RelativeLayout>
