<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:context="com.example.android.shelterforpets.Admin.AddShelters">

        <EditText
            android:id="@+id/add_shelter_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/shelter_name_hint"
            android:inputType="textPersonName"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email_hint"
            android:id="@+id/add_shelter_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/add_shelter_name"
            android:layout_alignLeft="@+id/add_shelter_name"
            android:layout_alignStart="@+id/add_shelter_name" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:layout_gravity="center_horizontal"
            android:id="@+id/add_shelter_password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/add_shelter_email"
            android:layout_alignLeft="@+id/add_shelter_email"
            android:layout_alignStart="@+id/add_shelter_email" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:layout_gravity="center_horizontal"
            android:id="@+id/add_shelter_confirm_password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/add_shelter_password"
            android:layout_alignLeft="@+id/add_shelter_password"
            android:layout_alignStart="@+id/add_shelter_password" />




        <Button
            android:id="@+id/add_shelter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_shelter_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp" />

</RelativeLayout>

