<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.shelterforpets.Authentication.ForgotPasswordActivity"
    android:background="@drawable/backgrouand_with_filter">

    <TextView
        android:id="@+id/reset_password_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|center"
        android:text="@string/reset_password_text"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp" />

    <EditText
        android:id="@+id/forgot_password_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/reset_password_text"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/reset_password_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/reset_password_button"
        android:layout_marginTop="26dp"
        android:src="@drawable/reset_password_button"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:layout_below="@+id/forgot_password_email"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app_logo"
        android:layout_marginTop="51dp"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
